--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pylint
-autopep8
-ipython
-Django
-Pillow=6.0.0
+pylint==2.3.1
+pylint-django==2.0.11
+autopep8==1.4.4
+ipython==7.5.0
+Django==2.2.4
+Pillow==6.0.0
